tests/negative/optimizer/exponent.orng
fn main() -> Int {
    2 ** 10000000
}